[bdist_wheel]
universal=1

[metadata]
description-file = README.rst
license_file = LICENSE

[tool:pytest]
python_files = test_*.py
testpaths = tests

[flake8]
max-line-length = 100

[pycodestyle]
max-line-length = 100

[coverage:run]
branch = True
source =
    enlighten

[coverage:report]
show_missing: True
fail_under: 100
exclude_lines =
	pragma: no cover
	raise NotImplementedError
	if __name__ == "__main__":

[build_sphinx]
source-dir = doc
build-dir = build/doc
all_files = True
fresh-env = True

[aliases]
spelling=build_sphinx --builder spelling
html=build_sphinx --builder html
