[bdist_wheel]
universal=1

[metadata]
description_file = README.rst
license_file = LICENSE

[tool:pytest]
python_files = test_*.py
testpaths = tests

[flake8]
max-line-length = 110
exclude = .svn,CVS,.bzr,.hg,.git,__pycache__,.tox,.eggs,*.egg,build,notes

[pycodestyle]
max-line-length = 110

[coverage:run]
branch = True
source =
    enlighten
omit =
	enlighten/_win_terminal.py

[coverage:report]
show_missing: True
fail_under: 100
exclude_lines =
	pragma: no cover
	raise NotImplementedError
	if __name__ == "__main__":

[build_sphinx]
source-dir = doc
build-dir = build/doc
all_files = True
fresh-env = True
warning-is-error = True

[aliases]
spelling=build_sphinx --builder spelling
html=build_sphinx --builder html
